--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3,11 +3,14 @@
 }
 
 .tovar_cell {
-    width: 10em;
+    box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.23);
+    width: 20em;
     height: 15em;
     float: left;
+    font-family: arial;
 }
 
 .tovar_cell img {
     width: 4em;
 }
+
